--- a/gradle.properties
+++ b/gradle.properties
@@ -34,3 +34,5 @@ POM_DEVELOPER_NAME=Ihsan Isik
 
 RELEASE_REPOSITORY_URL=https://oss.sonatype.org/service/local/staging/deploy/maven2
 SNAPSHOT_REPOSITORY_URL=https://oss.sonatype.org/content/repositories/snapshots
+android.useAndroidX=true
+android.enableJetifier=true
