--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -4,6 +4,11 @@ android {
     compileSdkVersion 29
     buildToolsVersion "28.0.3"
 
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
     defaultConfig {
         applicationId "tr.xip.errorview.sample"
         minSdkVersion 14
